--- a/momentum/index.html
+++ b/momentum/index.html
@@ -9,6 +9,9 @@
 
 </head>
 <body>
-    <script src="2-13.js"></script>
+    <div class="hello"> 
+        <h1>Grab me!</h1>
+    </div>
+    <script src="3-2.js"></script>
 </body>
 </html>
