--- a/momentum/index.html
+++ b/momentum/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="hello"> 
-        <h1>Grab me!</h1>
+        <h1 class="sexy-font">Grab me!</h1>
     </div>
-    <script src="3-2.js"></script>
+    <script src="3-8.js"></script>
 </body>
 </html>
