--- a/momentum/index.html
+++ b/momentum/index.html
@@ -9,9 +9,12 @@
 
 </head>
 <body>
-    <div class="hello"> 
-        <h1 class="sexy-font">Grab me!</h1>
-    </div>
-    <script src="3-8.js"></script>
+    <form class = "hidden" id="login-form">
+        <input required maxlength="15" type="text" placeholder="what is your name?"/>
+        <input type="submit" value="Log in"/>
+    </form>
+    <h1 id = "greeting" class = "hidden"></h1>
+    <a href="https://nomadcoders.co">Go to courses</a>
+    <script src="4-6.js"></script>
 </body>
 </html>
