--- a/momentum/index.html
+++ b/momentum/index.html
@@ -14,7 +14,14 @@
         <input type="submit" value="Log in"/>
     </form>
     <h1 id = "greeting" class = "hidden"></h1>
-    <a href="https://nomadcoders.co">Go to courses</a>
-    <script src="4-6.js"></script>
+    <h2 id="clock">00:00:00</h2>
+    <div id="quote">
+        <span></span>
+        <span></span>
+    </div>
+    <script src="ch5/greetings.js"></script>
+    <script src="ch5/clock.js"></script>
+    <script src="ch6/quotes.js"></script>
+    <script src="ch6/background.js"></script>
 </body>
 </html>
