--- a/momentum/index.html
+++ b/momentum/index.html
@@ -9,12 +9,16 @@
 
 </head>
 <body>
+    <h2 id="clock">00:00:00</h2>
     <form class = "hidden" id="login-form">
         <input required maxlength="15" type="text" placeholder="what is your name?"/>
         <input type="submit" value="Log in"/>
     </form>
-    <h1 id = "greeting" class = "hidden"></h1>
-    <h2 id="clock">00:00:00</h2>
+    <h1 class = "hidden" id = "greeting"></h1>
+    <form id="todo-form">
+        <input type="text" placeholder="Write a To Do and Press Enter" required/>
+    </form>
+    <ul id="todo-list"></ul>
     <div id="quote">
         <span></span>
         <span></span>
@@ -23,5 +27,6 @@
     <script src="ch5/clock.js"></script>
     <script src="ch6/quotes.js"></script>
     <script src="ch6/background.js"></script>
+    <script src="ch7/todo.js"></script>
 </body>
 </html>
