--- a/momentum/index.html
+++ b/momentum/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <h2 id="clock">00:00:00</h2>
+    <h2 id="clock">00:00:00</h2></br>
     <form class = "hidden" id="login-form">
         <input required maxlength="15" type="text" placeholder="what is your name?"/>
         <input type="submit" value="Log in"/>
@@ -23,10 +23,16 @@
         <span></span>
         <span></span>
     </div>
+    </br><div id = "weather">
+        <span></span>
+        <span></span>
+    </div>
     <script src="ch5/greetings.js"></script>
     <script src="ch5/clock.js"></script>
     <script src="ch6/quotes.js"></script>
     <script src="ch6/background.js"></script>
     <script src="ch7/todo.js"></script>
+    <script src="ch8/api.js"></script>
+    <script src="ch8/weather.js"></script>
 </body>
 </html>
